--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <td><button class="btn-operator" id="clear">C</button></td>
                         <td><button class="btn-operator" id="/">&divide;</button></td>
                         <td><button class="btn-operator" id="*">&times;</button></td>
-                        <td><button class="btn-operator" id="backspace"><</button></td>
+                        <td><button class="btn-operator" id="backspace">B</button></td>
                     </tr>
                     <tr>
                         <td><button class="btn-number" id="7">7</button></td>
